# network-probe-platform

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.agent  Dockerfile.management  Makefile  README.md  alembic.ini  architecture-diagram.md  build-images.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py
agent/core/: __init__.py  agent.py  config.py  executor.py  logger.py  websocket_client.py
agent/monitoring/: __init__.py  resource_monitor.py
agent/protocols/: __init__.py  base.py  http.py  icmp.py  registry.py  tcp.py  udp.py
agent/updater/: __init__.py  update_client.py  version_manager.py
deployment/: .env.example  .env.prod  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
deployment/init-scripts/: 01-init-db.sql
deployment/kubernetes/: configmap.yaml  deploy-k8s.sh  ingress.yaml  management.yaml  namespace.yaml  postgres.yaml  pvc.yaml  rabbitmq.yaml  redis.yaml  secrets.yaml
deployment/logging/: logrotate.conf
deployment/monitoring/: loki.yml  prometheus.yml  promtail.yml
deployment/nginx/: nginx.conf  nginx.prod.conf
deployment/postgres/: postgresql.conf
deployment/redis/: redis.conf
deployment/systemd/: network-probe-monitor.service
docs/: README.md
docs/api/: api-reference.md
docs/deployment/: deployment-guide.md  monitoring-guide.md  troubleshooting-guide.md
docs/development/: architecture.md  contributing.md  development-guide.md  plugin-development.md
docs/user/: faq.md  user-guide.md
examples/: update_example.py
management-platform/: __init__.py
management_platform/: __init__.py
management_platform/api/: __init__.py  connection_manager.py  dependencies.py  docs.py  exceptions.py  main.py  message_dispatcher.py  middleware.py  run.py  websocket.py
management_platform/database/: __init__.py  base.py  connection.py  migrations.py  repositories.py
management_platform/notifications/: __init__.py  base.py  email.py  events.py  manager.py  queue.py  types.py
management_platform/scheduler/: __init__.py  allocator.py  executor.py  queue.py  scheduler.py
management_platform/updater/: __init__.py  package_manager.py  signature_manager.py
management_platform/web/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  vite.config.js
migrations/: env.py
scripts/: backup.sh  init_db.py  monitor.sh  setup-dev.sh
shared/: __init__.py  config.py
shared/models/: __init__.py  agent.py  base.py  task.py  user.py
shared/security/: __init__.py  auth.py  permissions.py  tls.py  websocket.py
tests/: __init__.py  conftest.py  test_config.py
tests/e2e/: test_simple_e2e.py  test_user_scenarios.py
tests/integration/: test_api_integration.py  test_simple_integration.py  test_websocket_integration.py
tests/unit/: __init__.py  test_agent_api.py  test_agent_core.py  test_agent_integration.py  test_agent_model.py  test_agent_repository.py  test_analytics_api.py  (+40 more)
(+25 files in other folders)
